# cpp_project

./: .gitignore  CMakeLists.txt  README.md  compile.bat
.github/workflows/: cmake-single-platform.yml
data/: basic_program.txt  cpu1.txt  platform.txt
include/: bus.hpp  component.hpp  cpu.hpp  dataValue.hpp  display.hpp  fifo.hpp  memory.hpp  platform.hpp  program.hpp  register.hpp  test.hpp
prog/: gael.cpp
src/: bus.cpp  component.cpp  cpu.cpp  display.cpp  memory.cpp  platform.cpp  program.cpp  register.cpp
tests/: test_bus.cpp  test_cpu.cpp  test_display.cpp  test_memory.cpp  test_plateform.cpp  test_platform.cpp  test_program.cpp  test_register.cpp
